# genlayer-utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PR_SUBMISSION_GUIDE.md  README.md  RELEASE_NOTES.md  SUBMISSION_SUMMARY.md  UPSTREAM_GENLAYER_DOCS_PR.md  pyproject.toml
.github/workflows/: ci.yml
docs/: access-control.md  best-practices.md  getting-started.md  llm-templates.md  nondet-patterns.md  storage-helpers.md  web-oracle.md
examples/: content_moderator.py  event_view.py  fact_checker.py  price_feed.py  price_feed_gas_workflow.py  price_feed_with_events.py  upgrade_proxy.py  voting.py
src/genlayer_utils/: __init__.py  access_control.py  llm.py  nondet.py  storage.py  web_oracle.py
tests/: support.py  test_access_control.py  test_fact_checker.py  test_nondet.py  test_nondet_integration.py  test_price_feed.py  test_storage.py  test_web_oracle.py
